<resources>
    <string name="app_name">COVID19 Tracker</string>
    <string name="track_countries">Track Countries</string>
    <string name="total_cases">Total Cases</string>
    <string name="deaths">Deaths</string>
    <string name="active">Active</string>
    <string name="global_stats">Global Stats</string>
    <string name="recovered">Recovered</string>
    <string name="critical">Critical</string>
    <string name="today_cases">Today Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="search_country">Search Country</string>
    <string name="country_name">Country Name</string>
    <string name="country">Country</string>
    <string name="powred_by_line">Powred By Ankur Singhal</string>
</resources>